load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "actor-jaegertracing_lib",
    srcs = ["main.go"],
    importpath = "github.com/AsynkronIT/protoactor-go/_examples/actor-jaegertracing",
    visibility = ["//visibility:private"],
    deps = [
        "//actor",
        "//actor/middleware/opentracing",
        "@com_github_asynkronit_goconsole//:go_default_library",
        "@com_github_uber_jaeger_client_go//:go_default_library",
        "@com_github_uber_jaeger_client_go//config:go_default_library",
        "@com_github_uber_jaeger_client_go//log:go_default_library",
        "@com_github_uber_jaeger_lib//metrics:go_default_library",
    ],
)

go_binary(
    name = "actor-jaegertracing",
    embed = [":actor-jaegertracing_lib"],
    visibility = ["//visibility:public"],
)
