load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "actor-lifecycleevents_lib",
    srcs = ["main.go"],
    importpath = "github.com/AsynkronIT/protoactor-go/_examples/actor-lifecycleevents",
    visibility = ["//visibility:private"],
    deps = [
        "//actor",
        "@com_github_asynkronit_goconsole//:go_default_library",
    ],
)

go_binary(
    name = "actor-lifecycleevents",
    embed = [":actor-lifecycleevents_lib"],
    visibility = ["//visibility:public"],
)
