load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "actor-mixins_lib",
    srcs = ["main.go"],
    importpath = "github.com/AsynkronIT/protoactor-go/_examples/actor-mixins",
    visibility = ["//visibility:private"],
    deps = [
        "//actor",
        "//actor/middleware",
        "//plugin",
        "@com_github_asynkronit_goconsole//:go_default_library",
    ],
)

go_binary(
    name = "actor-mixins",
    embed = [":actor-mixins_lib"],
    visibility = ["//visibility:public"],
)
