load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "actor-receive-middleware_lib",
    srcs = ["main.go"],
    importpath = "github.com/AsynkronIT/protoactor-go/_examples/actor-receive-middleware",
    visibility = ["//visibility:private"],
    deps = [
        "//actor",
        "//actor/middleware",
        "@com_github_asynkronit_goconsole//:go_default_library",
    ],
)

go_binary(
    name = "actor-receive-middleware",
    embed = [":actor-receive-middleware_lib"],
    visibility = ["//visibility:public"],
)
