load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "persistence_lib",
    srcs = ["main.go"],
    importpath = "github.com/AsynkronIT/protoactor-go/_examples/persistence",
    visibility = ["//visibility:private"],
    deps = [
        "//actor",
        "//persistence",
        "@com_github_asynkronit_goconsole//:go_default_library",
    ],
)

go_binary(
    name = "persistence",
    embed = [":persistence_lib"],
    visibility = ["//visibility:public"],
)
